fixed gap styling compatibility

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -29,13 +29,13 @@
 
   .icons {
     display: flex;
-    gap: 6px;
     margin-bottom: 75px;
 
     .icon {
       width: 50px;
       height: 50px;
       padding: 14px;
+      margin-right: 6px;
       cursor: pointer;
     }
 
@@ -132,10 +132,10 @@
   @media screen and (min-width: $mSize) {
     .container {
       flex-direction: row;
-      gap: 55px;
 
       .left {
         flex: 1;
+        margin-right: 55px;
       }
 
       .right {
@@ -146,11 +146,31 @@
         }
       }
     }
+
+    @supports (gap: 55px) {
+      .container {
+        gap: 55px;
+      }
+
+      .left {
+        margin-right: 0px;
+      }
+    }
   }
 
   @media screen and (min-width: $lSize) {
-    .container {
-      gap: 126px;
+    .left {
+      margin-right: 126px;
+    }
+
+    @supports (gap: 55px) {
+      .container {
+        gap: 126px;
+      }
+
+      .left {
+        margin-right: 0px;
+      }
     }
   }
 }
